global transaction system exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/registration?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/advert?serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=password
 
