--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=password
 
 spring.jpa.properties.hibernate.dialet=org.hibernate.dialet.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+security.oauth2.resource.jwk.keySetUri=https://${dev-kco-qkjl}/.well-known/jwks.json
+security.oauth2.resource.id=https://ads-api
+
+
